--- a/apps/api_data_visualizer/package.json
+++ b/apps/api_data_visualizer/package.json
@@ -1,10 +1,19 @@
 {
 
+  "main": "./dist/index.mjs",
+  "type": "module",
+
   "scripts": {
-    "dev": "node ./index.mjs",
-    "build": "",
-    "dataset-generator": "node dataset_generator.mjs",
+
+    "start": "node dist/index.mjs",
+    "dev": "node --trace-warnings --loader ts-node/esm src/index.mts",
+
+    "build": "tsc",
+
+    "dataset-generator": "node --trace-warnings --loader ts-node/esm src/dataset_generator.mts",
+
     "lint": "eslint ."
+
   },
 
   "dependencies": {
@@ -14,6 +23,22 @@
     "cors": "^2.8.5",
 
     "express": "^4.19.2"
+
+  },
+
+  "devDependencies": {
+
+    "@types/cors": "^2.8.17",
+
+    "@types/express": "^4.17.21",
+
+    "@types/morgan": "^1.9.9",
+
+    "@types/node": "^20.12.11",
+
+    "ts-node": "^10.9.2",
+
+    "typescript": "^5.4.5"
 
   }
 
