--- a/package.json
+++ b/package.json
@@ -2,15 +2,26 @@
   "name": "study_ml_drawing_sketch_image_recognition",
   "version": "1.0.0",
   "main": "index.js",
-
   "private": true,
+  "scripts": {
+    "lint": "eslint 'apps/**/*.{js,jsx,ts,tsx,mjs,mts}' --fix",
+    "lint:packages": "eslint 'packages/**/*.{js,jsx,ts,tsx,mjs,mts}' --fix",
+    "lint:all": "eslint 'apps/**/*.{js,jsx,ts,tsx,mjs,mts}'  --fix"
+  },
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
-  
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@eslint/js": "^9.2.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^8.57.0",
+    "globals": "^15.2.0",
+    "typescript-eslint": "^7.8.0"
+  }
 }
