--- a/apps/custom_chart/package.json
+++ b/apps/custom_chart/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "web_data_viewer",
+  "name": "vite-template-solid",
   "version": "0.0.0",
   "description": "",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint ."
+    "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/google.visualization": "^0.0.74",
     "solid-devtools": "^0.29.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
