--- a/apps/custom_chart/tsconfig.json
+++ b/apps/custom_chart/tsconfig.json
@@ -8,12 +8,8 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": [
-      "vite/client",
-      "google.visualization"
-    ],
+    "types": ["vite/client"],
     "noEmit": true,
     "isolatedModules": true,
-    "resolveJsonModule": true
   },
 }
