Chart: scaling and positioning

--- a/apps/custom_chart/tsconfig.json
+++ b/apps/custom_chart/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "compilerOptions": {
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "strict": true,
     "target": "ESNext",
     "module": "ESNext",
@@ -8,7 +12,9 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
+    "types": [
+      "vite/client"
+    ],
     "noEmit": true,
     "isolatedModules": true,
   },
