highlight table selection

--- a/apps/web_data_viewer/tsconfig.json
+++ b/apps/web_data_viewer/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "strict": true,
     "target": "ESNext",
@@ -14,6 +15,7 @@
     ],
     "noEmit": true,
     "isolatedModules": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true
   },
 }
