--- a/apps/web_sketchpad/tsconfig.json
+++ b/apps/web_sketchpad/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "strict": true,
     "target": "ESNext",
@@ -8,8 +9,11 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
+    "types": [
+      "vite/client"
+    ],
     "noEmit": true,
     "isolatedModules": true,
+    "forceConsistentCasingInFileNames": true
   },
 }
