--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@emotion/eslint-plugin": "^11.11.0",
+    "@eslint/js": "^9.2.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
-    "@eslint/js": "^9.2.0",
     "eslint": "^8.57.0",
     "typescript-eslint": "^7.8.0"
   },
