--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "dataset-generator": "tsx src/dataset_generator.mts",
     "feature-extractor": "tsx src/feature_extractor.mts",
+    "classification": "tsx src/classification.mts",
     "lint": "eslint ."
   },
   "dependencies": {
