--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "license": "ISC",
   "devDependencies": {
     "@emotion/eslint-plugin": "^11.11.0",
-    "@eslint/js": "^9.2.0",
-    "@typescript-eslint/eslint-plugin": "^7.12.0",
-    "@typescript-eslint/parser": "^7.12.0",
+    "@eslint/js": "^9.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.14.1",
+    "@typescript-eslint/parser": "^7.14.1",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
-    "prettier": "^3.3.1",
-    "typescript-eslint": "^7.8.0"
+    "prettier": "^3.3.2",
+    "typescript": "^5.5.2",
+    "typescript-eslint": "^7.14.1"
   },
   "description": ""
 }
